Added Swagger UI with JWT authorization support